--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,14 @@ jobs:
       - uses: actions/checkout@v2
       - run: yarn install && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
+        env:
+          VITE_API_KEY: '${{ secrets.VITE_API_KEY }}'
+          VITE_AUTH_DOMAIN: '${{ secrets.VITE_AUTH_DOMAIN }}'
+          VITE_PROJECT_ID: '${{ secrets.VITE_PROJECT_ID }}'
+          VITE_STORAGE_BUCKET: '${{ secrets.VITE_STORAGE_BUCKET }}'
+          VITE_MESSAGING_SENDER_ID: '${{ secrets.VITE_MESSAGING_SENDER_ID }}'
+          VITE_APP_ID: '${{ secrets.VITE_APP_ID }}'
+          VITE_MEASUREMENT_ID: '${{ secrets.VITE_MEASUREMENT_ID }}'
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_REALTIME_SOLID_CHAT_APP }}'
