--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: yarn install && yarn build
+      - run: yarn install && VITE_API_KEY=${{ secrets.VITE_API_KEY }} VITE_AUTH_DOMAIN=${{ secrets.VITE_AUTH_DOMAIN }} VITE_PROJECT_ID=${{ secrets.VITE_PROJECT_ID }} VITE_STORAGE_BUCKET=${{ secrets.VITE_STORAGE_BUCKET }} VITE_MESSAGING_SENDER_ID=${{ secrets.VITE_MESSAGING_SENDER_ID }} VITE_APP_ID=${{ secrets.VITE_APP_ID }} VITE_MEASUREMENT_ID=${{ secrets.VITE_MEASUREMENT_ID }} npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         env:
           VITE_API_KEY: '${{ secrets.VITE_API_KEY }}'
